# fp_dsec

./: image_recognition.ipynb  image_recognition.py
C++/image_recognition/: CMakeLists.txt  image_recognition
C++/image_recognition/include/image_recognition/: cv_wrapper.h  utils.h
C++/image_recognition/src/: cv_wrapper.cpp  main.cpp  test.cpp  utils.cpp
knn_feature/: feature_knn.ipynb
knn_feature/.ipynb_checkpoints/: feature_knn-checkpoint.ipynb  gabor_texture_recognition-checkpoint.ipynb
no1/: No1.ipynb
no1/.ipynb_checkpoints/: No1-checkpoint.ipynb
no2/: db_hsv_all.txt  db_hsv_best.txt  db_rgb_all.csv  db_rgb_best.txt  learning.ipynb  learning.py  recognizing.ipynb
no4/: recognize.py
no4/pyimagesearch/: localbinarypatterns.py
